most links are fixed

--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -170,7 +170,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation"><img class="g-width-120 g-height-70" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Animated Background Stock Video Footage for Premium Download</a></h3>
+                                <a class="g-color-main" href="animated-background-stock-video-footage-for-premium-download.html">Animated Background Stock Video Footage for Premium Download</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 30, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -315,7 +315,7 @@
                             <a class="d-flex mr-3" href="https ://stock.adobe.com/contributor/211977281/SPurnoAnimation"><img class="g-width-120 g-height-70" src="images/infographics-spurno-animation-studio.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Browse Animation Library</a>
+                                <a class="g-color-main" href="pitch-deck.html">Pitch Deck Template</a>
                               </h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 07, 2024</li>
@@ -332,7 +332,7 @@
                           <article class="media g-mb-20">
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
-                              <h3 class="h6"><a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">Find Corporate Presentation Background</a></h3>
+                              <h3 class="h6"><a class="g-color-main" href="powerpoint-slides.html">Powerpoint Slides</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 20, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -349,7 +349,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/news.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">Find News Studio Background Animation</a></h3>
+                                <a class="g-color-main" href="loading-bar-animation.html">Loading Bar Animation</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 16, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -367,7 +367,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/device-mockup-2.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">10 Most Wanted Device Mockup</a></h3>
+                                <a class="g-color-main" href="presentation-templates.html">Presentation Templates</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 30, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -381,10 +381,10 @@
                           </article>
 
                           <article class="media g-mb-20">
-                            <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/tablet-mockup-animated-screen.jpg" alt="SPurno Animation Studio"></a>
+                            <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/infographics-template-thumb.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">Animated Background With Device Animation</a></h3>
+                                <a class="g-color-main" href="infographic-template.html">Infographic Template</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 16, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -625,7 +625,7 @@
                         <div class="col-lg-4">
                           <article>
                             <figure class="g-pos-rel">
-                              <img class="img-fluid w-100 g-mb-20" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="SPurno Animation Studio">
+                              <img class="img-fluid w-100 g-mb-20" src="images/tablet-mockup-animated-screen.jpg" alt="SPurno Animation Studio">
                             </figure>
                             <h3 class="h4 g-mb-10"><a class="g-color-gray-dark-v2" href="presentation-slides.html">Presentation Slide Template</a>
                             </h3>
@@ -649,7 +649,7 @@
                             <a class="d-flex mr-3" href="https ://stock.adobe.com/contributor/211977281/SPurnoAnimation"><img class="g-width-120 g-height-70" src="images/infographics-spurno-animation-studio.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Browse Animation Library</a>
+                                <a class="g-color-main" href="pitch-deck.html">Pitch Deck Template</a>
                               </h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 07, 2024</li>
@@ -666,7 +666,7 @@
                           <article class="media g-mb-20">
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
-                              <h3 class="h6"><a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">Find Corporate Presentation Background</a></h3>
+                              <h3 class="h6"><a class="g-color-main" href="powerpoint-slides.html">Powerpoint Slides</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 20, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -683,7 +683,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/news.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">Find News Studio Background Animation</a></h3>
+                                <a class="g-color-main" href="loading-bar-animation.html">Loading Bar Animation</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 16, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -701,7 +701,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/device-mockup-2.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">10 Most Wanted Device Mockup</a></h3>
+                                <a class="g-color-main" href="presentation-templates.html">Presentation Templates</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 30, 2024</li>
                                 <li class="list-inline-item">/</li>
@@ -715,10 +715,10 @@
                           </article>
 
                           <article class="media g-mb-20">
-                            <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/tablet-mockup-animated-screen.jpg" alt="SPurno Animation Studio"></a>
+                            <a class="d-flex mr-3" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination"><img class="g-width-120 g-height-70" src="images/infographics-template-thumb.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/search?creator_id=211977281&filters%5Bcontent_type%3Aphoto%5D=1&filters%5Bcontent_type%3Aillustration%5D=1&filters%5Bcontent_type%3Azip_vector%5D=1&filters%5Bcontent_type%3Avideo%5D=1&filters%5Bcontent_type%3Atemplate%5D=1&filters%5Bcontent_type%3A3d%5D=1&filters%5Bcontent_type%3Aaudio%5D=0&filters%5Binclude_stock_enterprise%5D=0&filters%5Bis_editorial%5D=0&filters%5Bfetch_excluded_assets%5D=1&filters%5Bcontent_type%3Aimage%5D=1&order=relevance&safe_search=1&search_page=2&get_facets=0&search_type=pagination">Animated Background With Device Animation</a></h3>
+                                <a class="g-color-main" href="infographic-template.html">Infographic Template</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 16, 2024</li>
                                 <li class="list-inline-item">/</li>
