--- a/about-us.html
+++ b/about-us.html
@@ -288,7 +288,7 @@
                             <a class="d-flex mr-3" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation"><img class="g-width-120 g-height-70" src="images/Animated-Background-Stock-Video-Footage-for-Premium-Download-2.jpg" alt="SPurno Animation Studio"></a>
                             <div class="media-body">
                               <h3 class="h6">
-                                <a class="g-color-main" href="https://stock.adobe.com/contributor/211977281/SPurnoAnimation">Animated Background Stock Video Footage for Premium Download</a></h3>
+                                <a class="g-color-main" href="animated-background-stock-video-footage-for-premium-download.html">Animated Background Stock Video Footage for Premium Download</a></h3>
                               <ul class="u-list-inline g-font-size-12 g-color-gray-dark-v4">
                                 <li class="list-inline-item">Jan 30, 2024</li>
                                 <li class="list-inline-item">/</li>
