--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   </li>
                   <!-- End Home - Submenu -->
 
-                  <!-- Home - Submenu -->
+                  <!-- Shop Now - Submenu -->
                   <li class="nav-item hs-has-sub-menu g-mr-10--lg g-mr-20--xl">
                     <a id="nav-link--home" class="nav-link text-uppercase g-color-primary--hover g-px-0" href="#"
                        aria-haspopup="true"
@@ -125,7 +125,7 @@
                   </li>
                   <!-- End Pages - Submenu -->
 
-                  <!-- Mega Menu Item -->
+                  <!-- Animation Mega Menu -->
                   <li class="hs-has-mega-menu nav-item g-mx-10--lg g-mx-20--xl"
                       data-animation-in="fadeIn"
                       data-animation-out="fadeOut"
