--- a/animated-background-stock-video-footage-for-premium-download.html
+++ b/animated-background-stock-video-footage-for-premium-download.html
@@ -2310,6 +2310,7 @@
     <script src="blog/assets/js/components/hs.carousel.js"></script>
     <script src="blog/assets/js/components/hs.popup.js"></script>
     <script src="blog/assets/js/components/hs.go-to.js"></script>
+    <script src="https://apis.google.com/js/platform.js"></script>
 
     <!-- JS Customization -->
     <script src="blog/assets/js/custom.js"></script>
