--- a/powerpoint-slides.html
+++ b/powerpoint-slides.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Creating Effective PowerPoint Slides for Presentations | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
+    <title>Powerpoint Presentation Slides Templates | Creating Effective PowerPoint Slides for Presentations | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
@@ -796,7 +796,7 @@
             <div class="col-lg-9 g-mb-50 g-mb-0--lg">
               <article class="g-mb-60">
                 <header class="g-mb-30">
-                  <h2 class="h1 g-mb-15">Creating Effective PowerPoint Slides for Presentations | How to Design Engaging PowerPoint Slides </h2>
+                  <h2 class="h1 g-mb-15">Powerpoint Presentation Slides Templates | How to Design Engaging PowerPoint Slides </h2>
 
                   <ul class="list-inline d-sm-flex g-color-gray-dark-v4 mb-0">
                     <li class="list-inline-item">
