--- a/presentation-templates.html
+++ b/presentation-templates.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Title -->
-    <title>Presentation Templates | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
+    <title>Presentation Templates | Creating Effective PowerPoint Slides for Presentations | SPurno Animation Studio - Corporate Animation Artist at AdobeStock & Shutterstock</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description"  content="Corporate Animation | Advertising Template | Mockup | Minimal Presentation Template | Pitch Deck Agency | Corporate Animation Background | Template Design | Abstract Background | Animator on AdobeStock & Shutterstock" />
-    <meta name="author" content="SPurno Animation Studio">
+    <meta name="author" content="Creating Effective PowerPoint Slides for Presentations">
     <meta name="keywords"  content="animation background, digital wallpaper, motion background, business presentation, business presentation templates, business powerpoint templates,moving backgrounds, startup pitch deck, live wallpapersfree motion backgrounds,free motion backgrounds for worship,pitch deck services,pitch deck design agency,business plan presentation,pitch deck companies,church motion graphics free,business plan ppt,free animated backgrounds,lively wallpaper download,best powerpoint templates for business,creating a pitch deck,startup pitch deck examples,motion backgrounds for church free,pitch deck design company,worship background,business pitch deck,live wallpaper download,investment pitch deck,business plan powerpoint,motion loops,powerpoint design company,live wallpaper, 4kfree moving backgrounds,business pitch" />
     <meta property="og:title" content="Corporate Animation Artist" />
     <meta property="og:type" content="website" />
@@ -796,7 +796,7 @@
             <div class="col-lg-9 g-mb-50 g-mb-0--lg">
               <article class="g-mb-60">
                 <header class="g-mb-30">
-                  <h2 class="h1 g-mb-15">3d Infographic | SPurno Animation Studio</h2>
+                  <h2 class="h1 g-mb-15">Presentation Templates | Creating Effective PowerPoint Slides for Presentations | How to Design Engaging PowerPoint Slides </h2>
 
                   <ul class="list-inline d-sm-flex g-color-gray-dark-v4 mb-0">
                     <li class="list-inline-item">
@@ -852,7 +852,7 @@
                   <p>Aliquam ante ipsum, maximus in orci ut, blandit aliquam ipsum. Phasellus sed tortor non magna lobortis faucibus. Mauris pharetra convallis urna, eu porttitor velit pretium eget. Vestibulum vehicula quis felis eget imperdiet. Sed vulputate tincidunt facilisis. Morbi eu suscipit dolor. Quisque nec turpis quis ante gravida placerat non at turpis. Phasellus tincidunt nisi eget posuere porta.</p>
 
                   <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">If you can design one thing, you can design everything. Just believe it.</h3>
+                    <h3 class="text-uppercase g-color-primary">Top Tips for Creating Professional PowerPoint Presentations</h3>
                   </div>
 
                   <p>Consectetur adipiscing elit. In risus neque, semper sed congue eget, ultricies et tortor. Duis lorem libero, dapibus lacinia tellus id, pulvinar rutrum diam. Cras tempor lectus quis erat facilisis, a commodo mi volutpat. Sed vitae libero libero. Vestibulum non leo lobortis, placerat est a, laoreet mauris. Aenean vitae erat interdum, dignissim tellus quis, pellentesque libero. Nullam feugiat magna non justo sodales mattis. Phasellus mattis velit justo, non hendrerit felis tincidunt vitae. In at mi finibus, finibus sem dictum, convallis libero. In condimentum euismod nunc id dapibus. Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem.</p>
@@ -878,7 +878,7 @@
 
                   <div class="g-width-70x--md 1mx-auto g-my-40">
                     <blockquote class="blockquote g-color-primary g-brd-2 g-brd-primary--hover text-uppercase g-font-size-22 g-transition-0_2 g-mb-30">
-                      <p>The best ideas come as jokes. Make your thinking as funny as possible and use them in your projects.</p>
+                      <p>Best PowerPoint Templates for Business Presentations.</p>
                       <footer class="blockquote-footer g-font-size-12">John Doe</footer>
                     </blockquote>
                   </div>
