--- a/presentation-templates.html
+++ b/presentation-templates.html
@@ -765,7 +765,7 @@
         <div class="container">
           <div class="d-sm-flex text-center">
             <div class="align-self-center">
-              <h2 class="h3 g-mb-10 g-mb-0--md">SPurno Animation Studio Blog</h2>
+              <h2 class="h3 g-mb-10 g-mb-0--md">Discover, Share, and Present presentations and infographics with the world's largest professional content sharing community.</h2>
             </div>
 
             <div class="align-self-center ml-auto">
@@ -796,7 +796,7 @@
             <div class="col-lg-9 g-mb-50 g-mb-0--lg">
               <article class="g-mb-60">
                 <header class="g-mb-30">
-                  <h2 class="h1 g-mb-15">Presentation Templates | Creating Effective PowerPoint Slides for Presentations | How to Design Engaging PowerPoint Slides </h2>
+                  <h2 class="h1 g-mb-15">Presentation slides | Presentation Slides Video Template form Adobe Stock</h2>
 
                   <ul class="list-inline d-sm-flex g-color-gray-dark-v4 mb-0">
                     <li class="list-inline-item">
@@ -846,106 +846,56 @@
 
                 <div class="g-font-size-16 g-line-height-1_8 g-mb-30">
                   <figure class="u-shadow-v25 g-mb-30">
-                    <img class="img-fluid w-100" src="blog/assets/img-temp/900x600/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="img-fluid w-100" src="images/Infographics-slide-template.jpg" alt="SPurno Animation Studio">
                   </figure>
 
-                  <p>Aliquam ante ipsum, maximus in orci ut, blandit aliquam ipsum. Phasellus sed tortor non magna lobortis faucibus. Mauris pharetra convallis urna, eu porttitor velit pretium eget. Vestibulum vehicula quis felis eget imperdiet. Sed vulputate tincidunt facilisis. Morbi eu suscipit dolor. Quisque nec turpis quis ante gravida placerat non at turpis. Phasellus tincidunt nisi eget posuere porta.</p>
+                  <p>A slide is a single page of a presentation. A group of slides is called a slide deck. A slide show is an exposition of a series of slides or images in an electronic device or on a projection screen. Before personal computers, they were 35 mm slides viewed with a slide projector or transparencies viewed with an overhead projector.
 
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">Top Tips for Creating Professional PowerPoint Presentations</h3>
-                  </div>
+                    In the digital age, a slide most commonly refers to a single page developed using a presentation program such as MS PowerPoint, Apple Keynote, Google Slides, Apache OpenOffice or LibreOffice. Some are created with document markup language, such as the LaTeX-class Beamer. Lecture notes in slide format are lecture slides, frequently downloadable by students in .ppt or .pdf format.</p>
 
-                  <p>Consectetur adipiscing elit. In risus neque, semper sed congue eget, ultricies et tortor. Duis lorem libero, dapibus lacinia tellus id, pulvinar rutrum diam. Cras tempor lectus quis erat facilisis, a commodo mi volutpat. Sed vitae libero libero. Vestibulum non leo lobortis, placerat est a, laoreet mauris. Aenean vitae erat interdum, dignissim tellus quis, pellentesque libero. Nullam feugiat magna non justo sodales mattis. Phasellus mattis velit justo, non hendrerit felis tincidunt vitae. In at mi finibus, finibus sem dictum, convallis libero. In condimentum euismod nunc id dapibus. Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem.</p>
+                  <p></p>
 
-                  <p>Cras sit amet mi eros. Pellentesque auctor, massa at laoreet lobortis, mi lorem commodo enim, non mollis arcu erat ac augue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris maximus enim in mauris ornare bibendum. Cras bibendum, nibh non interdum lacinia, sem augue convallis nibh, sit amet eleifend lacus felis quis turpis. Suspendisse potenti.</p>
+                  <p>The only presentation software you'll ever need. Easily create beautiful slides online with free custom presentation templates and a massive media library.
 
+                    Create engaging presentations, faster. Free templates for Google Slides, PowerPoint and Canva PDF. Or kick off your next project with AI presentation maker.</p>
+
+                  <p>Discover, Share, and Present presentations and infographics with the world's largest professional content sharing community.</p>
+                  <a href="https://stock.adobe.com/stock-photo/id/895610384" class="btn btn-xxl btn-block u-btn-outline-darkgray g-mb-10">Browse Video Library</a>
                   <figure class="text-center text-md-left float-md-left g-pr-30--sm g-py-20 mb-0">
-                    <img class="u-shadow-v25 img-fluid g-width-300" src="blog/assets/img-temp/500x650/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="u-shadow-v25 img-fluid g-width-300" src="images/Infographics-slide-template-2.jpg" alt="SPurno Animation Studio">
                     <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em>A caption for the above image.</em>
+                      <em>Presentation Slides Video Green Screen Template</em>
                     </figcaption>
                   </figure>
-
-                  <p>Proin laoreet massa vitae pulvinar accumsan. Aenean auctor ipsum mauris, et sodales odio tristique non. Quisque eget diam a mi condimentum ullamcorper imperdiet sed urna. Pellentesque cursus convallis blandit. Mauris lorem eros, consequat et rutrum id, vestibulum quis felis. Proin non mollis eros. Curabitur vel laoreet mauris.</p>
-
-                  <p>Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu. Donec sed diam mattis, ullamcorper eros eu, aliquam dui. Maecenas rutrum suscipit risus sed posuere. Vestibulum imperdiet turpis mauris, sit amet consectetur ex porttitor ut. Duis sit amet auctor nunc. Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Mauris et porttitor diam. In semper volutpat mauris, ac fermentum orci commodo vitae. Curabitur ut feugiat tellus. Quisque consequat pharetra massa ultricies auctor. Sed mollis vulputate sapien eget tincidunt. Curabitur tempus lacus a sapien rutrum, feugiat blandit nunc tincidunt. Donec nec ornare tellus nunc elit rhoncus ligula.</p>
-
-                  <p>In neque ipsum, auctor eu bibendum cursus, fringilla sed magna. Vestibulum lobortis libero et lectus congue efficitur. Suspendisse varius varius finibus. Maecenas luctus convallis euismod.</p><br>
-
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">SPurno Animation Studio</h3>
-
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu. Donec sed diam mattis, ullamcorper eros eu, aliquam dui. Maecenas rutrum suscipit risus sed posuere. Vestibulum imperdiet turpis mauris, sit amet consectetur ex porttitor ut. Duis sit amet auctor nunc.</p>
-
-                  <div class="g-width-70x--md 1mx-auto g-my-40">
-                    <blockquote class="blockquote g-color-primary g-brd-2 g-brd-primary--hover text-uppercase g-font-size-22 g-transition-0_2 g-mb-30">
-                      <p>Best PowerPoint Templates for Business Presentations.</p>
-                      <footer class="blockquote-footer g-font-size-12">John Doe</footer>
-                    </blockquote>
+                  <h3>To download this template please Subscribe My YouTube Channel</h3>
+                  <div class="youtube-subscribe-btn">
+                    <div class="g-ytsubscribe" data-channelid="UCQw4aao26iBU9EHaS0k8NiQ" data-layout="default" data-theme="dark" data-count="default"></div>
                   </div>
+              
+                  <p>Presentation slides can be created in many pieces of software such as Microsoft PowerPoint, Apple Keynote, LibreOffice Impress, Prezi, ClearSlide, Powtoon, GoAnimate, Snagit, Camtasia, CamStudio, SlideShare, and Reallusion.</p>
 
-                  <p>Adipiscing elit, in risus neque, semper sed congue eget, ultricies et tortor. Duis lorem libero, dapibus lacinia tellus id, pulvinar rutrum diam. Cras tempor lectus quis erat facilisis, a commodo mi volutpat. Sed vitae libero libero. Vestibulum non leo lobortis, placerat est a, laoreet mauris. Aenean vitae erat interdum, dignissim tellus quis, pellentesque libero. Nullam feugiat magna non justo sodales mattis. Phasellus mattis velit justo, non hendrerit felis tincidunt vitae. In at mi finibus, finibus sem dictum, convallis libero. In condimentum euismod nunc id dapibus. Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem. Suspendisse id quam in ante lobortis fringilla. Aenean euismod ante eget  auctor fringilla. Morbi consequat ut felis a scelerisque. Aliquam purus sem, rutrum sit amet ligula a, tristique porttitor mauris.</p>
+                  <p>Some software, like competitors PowToon and Vyond, produces slides with more animation. Others like CamStudio can be used to record the screen activity.</p>
+
+                  <p>The most popular pieces of slide producing software are Microsoft PowerPoint, Prezi, Apple Keynote, Google Slides and ClearSlide.</p><br>
+
+                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Introducing SPurno Animation Studio</h3>
+
+                  <p>If you have subscribed, please go to the below of this article and download your preferred template.</p>
 
                   <figure class="text-center g-my-40">
-                    <img class="u-shadow-v25 img-fluid" src="blog/assets/img-temp/430x270/img1.jpg" alt="SPurno Animation Studio">
+                    <img class="u-shadow-v25 img-fluid" src="images/infographic-presentation-template-thumb2.jpg" alt="SPurno Animation Studio">
                     <figcaption class="figure-caption g-font-size-12 g-color-gray-dark-v4 g-mt-5">
-                      <em>A caption for the above image.</em>
+                      <em>Presentation Slides with green screen video mockup from AdobeStock</em>
                     </figcaption>
                   </figure>
+                  
+                  <a href="https://stock.adobe.com/stock-photo/id/895610384" class="btn btn-md u-btn-outline-gradient-v1 g-mr-10 g-mb-15">AdobeStock</a>
+                  <a href="https://stock.adobe.com/stock-photo/id/895607094" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Green Screen Video Template</a>
+                  <a href="https://mega.nz/file/QlQFxRQC#MAaNHGXK8NRkq61tmDjYPTd_-6ojb9KJadsVx38p_fg" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download Now(.pdf)</a>
+                  <a href="https://mega.nz/file/Y8gzXCZJ#GM9M_WQKyVTg_yh7HOKE-dbQ0Cncbh5x8raCBX5M5y0" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download Now(.eps)</a>
 
-                  <p>Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus. Vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu. Donec sed diam mattis, ullamcorper eros eu, aliquam dui. Maecenas rutrum suscipit risus sed posuere. Vestibulum imperdiet turpis mauris, sit amet consectetur ex porttitor ut. Duis sit amet auctor nunc.</p><br>
-
-                  <h3 class="h5 g-color-gray-dark-v1 g-font-weight-600 g-mb-10">Now and Future</h3>
-
-                  <p>Praesent sagittis posuere felis et viverra. Mauris eros dui, malesuada nec risus nec, placerat porta sem. Suspendisse id quam in ante lobortis fringilla. Aenean euismod ante eget auctor fringilla. Morbi consequat ut felis a scelerisque. Aliquam purus sem, rutrum sit amet ligula a, tristique porttitor mauris.</p>
-
-                  <ul class="list-unstyled g-font-size-16 g-my-30">
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Wrapbootstrap Marketplace egestas eget lectus vel, pretium semper tellus</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Google Adwords &amp; Adsense purus sem, rutrum sit amet ligula a, tristique port</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Web Design with UX/UI enim a varius condimentum, nunc elit rhoncus</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Digital Marketing scelerisque libero diam, nec tempor justo hendreri</span>
-                      </h4>
-                    </li>
-                    <li class="g-mb-15">
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>Support Forum &amp; Community rutrum suscipit risus sed posuere</span>
-                      </h4>
-                    </li>
-                    <li>
-                      <h4 class="h6 d-flex align-items-baseline">
-                        <i class="fa fa-angle-right g-color-gray-dark-v5 g-mr-10"></i>
-                        <span>SPurno Animation Studio</span>
-                      </h4>
-                    </li>
-                  </ul>
-
-                  <p>Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim. Curabitur dolor elit, egestas eget lectus vel, pretium semper tellus. Nunc urna lectus, vulputate ut tellus aliquam, pharetra consectetur enim. Nunc scelerisque libero diam, nec tempor justo hendrerit eu.</p>
-
-                  <div class="text-center g-width-70x--md mx-auto g-my-40">
-                    <h3 class="text-uppercase g-color-primary">Finding ways to help tell your story through video is a powerful tool.</h3>
-                  </div>
-
-                  <p>Mauris et porttitor diam. In semper volutpat mauris, ac fermentum orci commodo vitae. Curabitur ut feugiat tellus. Quisque consequat pharetra massa ultricies auctor. Sed mollis vulputate sapien eget tincidunt. Curabitur tempus lacus a sapien rutrum, feugiat blandit nunc tincidunt. Donec nec ornare tellus. In neque ipsum, auctor eu bibendum cursus, fringilla sed magna. Vestibulum lobortis libero et lectus congue efficitur. Suspendisse varius varius finibus. Maecenas luctus convallis euismod. Praesent ultrices, enim a varius condimentum, nunc elit rhoncus ligula, quis fringilla risus augue sit amet enim.</p>
                 </div>
-
+                <p>PowerPoint is currently the most popular slides presentation program. LibreOffice Impress is a FOSS alternative.</p>
                 <!-- Sources & Tags -->
                 <div class="g-mb-30">
                   <h6 class="g-color-gray-dark-v1 g-mb-15">
