--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -862,7 +862,54 @@
                   <h3>5. Google Ads</h3>
                   <p>   - Purpose: Google’s paid advertising platform for PPC (Pay-Per-Click) advertising on search engines and display networks. <br>
                     - Effectiveness: Highly effective for driving immediate traffic and generating leads when optimized properly. The ability to target specific audiences based on demographics and behavior makes it a powerful tool for conversions.</p>
-                  <h3>6. HubSpot</h3>
+                  <!-- Banners -->
+                  <div class="row align-items-stretch">
+                    <div class="col-lg-5">
+                      <!-- Article -->
+                      <article class="g-flex-middle g-bg-cover g-bg-size-cover g-bg-black-opacity-0_3--after g-py-75 g-px-50 g-mb-30" data-bg-img-src="../../assets/img-temp/400x270/img1.jpg">
+                        <div class="g-flex-middle-item g-z-index-1 g-width-300">
+                          <h3 class="g-color-white g-font-weight-700 text-uppercase g-letter-spacing-3 g-mb-15">Infgraphic Template</h3>
+                          <div class="g-line-height-2 g-mb-20">
+                            <p class="g-color-white-opacity-0_9">Visit Infographic profile &amp; Buy from AdobeStock </p>
+                          </div>
+                          <span class="g-color-primary g-font-weight-700 g-font-size-16 text-uppercase">From $5.00</span>
+                        </div>
+                      </article>
+                      <!-- End Article -->
+  
+                      <!-- Article -->
+                      <article class="text-uppercase text-center g-flex-middle g-bg-cover g-bg-size-cover g-bg-black-opacity-0_3--after g-color-white g-py-75 g-px-50" data-bg-img-src="../../assets/img-temp/400x270/img18.jpg">
+                        <div class="g-flex-middle-item g-z-index-1">
+                          <span class="d-inline-block g-brd-bottom g-brd-2 g-brd-primary g-font-weight-700 g-font-size-16 g-letter-spacing-1 g-pb-8 g-mb-20">Examples of branding projects</span>
+                          <h3 class="h2 g-font-weight-700 g-letter-spacing-3 g-mb-35">Branding work</h3>
+                          <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Shop Now</a>
+                        </div>
+                      </article>
+                      <!-- End Article -->
+                    </div>
+  
+                    <div class="col-lg-7">
+                      <!-- Article -->
+                      <article class="h-100 g-flex-middle g-bg-cover g-bg-size-cover g-bg-black-opacity-0_3--after g-py-75 g-px-50" data-bg-img-src="../../assets/img-temp/500x650/img10.jpg">
+                        <div class="g-flex-middle-item g-z-index-1 g-width-370">
+                          <h2 class="g-font-weight-700 text-uppercase g-color-white g-mb-15">Pricing plans</h2>
+                          <strong class="d-block g-color-white g-font-size-60 g-font-weight-700 text-uppercase g-line-height-1 g-letter-spacing-3 g-mb-25">
+  
+                            <span class="g-color-primary">40%</span>
+  
+                            OFF</strong>
+                          <div class="g-line-height-2 g-mb-35">
+                            <p class="g-color-white-opacity-0_9">This is where we sit down, grab a cup of coffee and dial in the details. Understanding the task at hand and ironing out the wrinkles is key.</p>
+                          </div>
+                          <a class="btn btn-md u-btn-outline-white g-font-weight-600 g-font-size-11 text-uppercase" href="https://stock.adobe.com/contributor/211977281/spurnoanimation">Shop Now</a>
+                        </div>
+                      </article>
+                      <!-- End Article -->
+                    </div>
+                  </div>
+                  <!-- End Banners -->
+                   <br>
+                    <h3>6. HubSpot</h3>
                   <p>   - Purpose: An all-in-one inbound marketing, sales, and customer service tool that offers CRM, email marketing, content management, and social media marketing. <br>
                     - Effectiveness: Extremely effective for managing a complete digital marketing funnel. The CRM integration provides valuable insights into customer journeys and leads to better-targeted marketing efforts.</p>
                   <h3>7. Canva</h3>
