link_advertiser_url_included

--- a/presentation-templates.html
+++ b/presentation-templates.html
@@ -891,8 +891,8 @@
                   
                   <a href="https://stock.adobe.com/stock-photo/id/895610384" class="btn btn-md u-btn-outline-gradient-v1 g-mr-10 g-mb-15">AdobeStock</a>
                   <a href="https://stock.adobe.com/stock-photo/id/895607094" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Green Screen Video Template</a>
-                  <a href="https://mega.nz/file/QlQFxRQC#MAaNHGXK8NRkq61tmDjYPTd_-6ojb9KJadsVx38p_fg" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download Now(.pdf)</a>
-                  <a href="https://mega.nz/file/Y8gzXCZJ#GM9M_WQKyVTg_yh7HOKE-dbQ0Cncbh5x8raCBX5M5y0" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download Now(.eps)</a>
+                  <a href="https://link-hub.net/629857/presentation-template" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download Now(.pdf)</a>
+                  <a href="https://link-center.net/629857/presentation-template-eps" class="btn btn-md u-btn-outline-gradient-v2 g-mr-10 g-mb-15">Download Now(.eps)</a>
 
                 </div>
                 <p>PowerPoint is currently the most popular slides presentation program. LibreOffice Impress is a FOSS alternative.</p>
